<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="255dp"
        android:layout_height="156dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView56"
                        android:layout_width="119dp"
                        android:layout_height="wrap_content"
                        android:text="tipo de sensor" />

                    <TextView
                        android:id="@+id/textView55"
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:text="consumo" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_acelerometro" />

                    <TextView
                        android:id="@+id/txt_acelerometro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="N/A"
                        android:textColor="#0EA010"
                        android:textColorHint="#D60C23" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_giroscopio" />

                    <TextView
                        android:id="@+id/txt_giroscopio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="N/A"
                        android:textColor="#0EA010"
                        android:textColorHint="#D60C23" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView52"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_luminosidad" />

                    <TextView
                        android:id="@+id/txt_luminosidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="N/A"
                        android:textColor="#0EA010"
                        android:textColorHint="#D60C23" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView54"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_proximidad" />

                    <TextView
                        android:id="@+id/txt_proximidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="N/A"
                        android:textColor="#0EA010"
                        android:textColorHint="#D60C23" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView46"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_wifi" />

                    <TextView
                        android:id="@+id/txt_gps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="N/A"
                        android:textColor="#0EA010"
                        android:textColorHint="#D60C23" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_bateria" />

                    <TextView
                        android:id="@+id/txt_bateria"
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:hint="N/A"
                        android:textColor="#0EA010"
                        android:textColorHint="#D60C23" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_estado" />

                    <TextView
                        android:id="@+id/txt_consumo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="#DBEC3F"
                        android:textColorLink="#B1EB46" />

                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView41"
        android:layout_width="106dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        android:text="@string/app_name"
        android:textColor="#171F17"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="333dp"
        android:layout_height="328dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="sensores activos"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_salida"
                android:layout_width="381dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/bateria_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



